style(circles): fix overflow, positioning and animation

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,14 +25,17 @@ body {
 }
 
 .circle-1 {
+  will-change: transform;
   animation: circle-1-keyframes 13s ease-in-out infinite alternate;
 }
 
 .circle-2 {
+  will-change: transform;
   animation: circle-2-keyframes 8s ease-in-out infinite alternate;
 }
 
 .circle-3 {
+  will-change: transform;
   animation: circle-3-keyframes 18s ease-in-out infinite alternate;
 }
 
@@ -55,58 +58,26 @@ body {
   background: #5c636e;
 }
 
-@media screen and (min-width: 768px) {
-  @keyframes circle-1-keyframes {
-    0% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: rotate(45deg) translateX(250px) translateY(350px);
-    }
-  }
-
-  @keyframes circle-2-keyframes {
-    0% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: rotate(30deg) translateX(150px) translateY(-70px);
-    }
-  }
-
-  @keyframes circle-3-keyframes {
-    0% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: rotate(90deg) translateX(200px) translateY(70px);
-    }
-  }
-}
-
 @keyframes circle-1-keyframes {
   0% {
-    transform: rotate(0deg);
   }
   100% {
-    transform: rotate(45deg) translateX(650px) translateY(400px);
+    transform: translateX(200px) translateY(50px);
   }
 }
 
 @keyframes circle-2-keyframes {
   0% {
-    transform: rotate(0deg);
   }
   100% {
-    transform: rotate(30deg) translateX(300px) translateY(-100px);
+    transform: translateX(300px) translateY(-25px);
   }
 }
 
 @keyframes circle-3-keyframes {
   0% {
-    transform: rotate(0deg);
   }
   100% {
-    transform: rotate(90deg) translateX(500px) translateY(100px);
+    transform: translateX(250px) translateY(25px);
   }
 }
